Fix Player and Logo Display on Mobile Devices

--- a/static/style.css
+++ b/static/style.css
@@ -109,7 +109,7 @@ input[type="radio"]{display: none;}
 #sBar{background-color:rgb(77, 178, 36);}
 .opacityFull{opacity: 1 !important;}
 
-#zicon{height:30%;width:15%;}
+#zicon{width:25%;}
 .fchan{color: #fff;
 font-size: 3vw;
 padding-top: 25%;padding: 0;
@@ -129,7 +129,7 @@ margin: 0;}
 	#controls{display:none;}
     body{background-color: #2F2F2F;}
     .bgimage{background-image: url(bg4.jpg);position:fixed;background-size:500%;background-color:black;-webkit-filter: brightness(70%);filter: brightness(70%);}
-    #player{width: 100%; height:45%; margin-bottom: 20px; box-shadow: none;display:none;}
+    #player{width: 100%; height:45%; margin-bottom: 20px; box-shadow: none;}
     .playlist{width: 100%;}
     .lresult{font-size: 40px; height: 90px; font-size: 50px;}
     .votes{float: right; background-color: rgba(0,0,0,0.9); margin-top: -1.5em;font-size: 42px; padding-right: 8px; height: 89px; line-height: 89px; padding-left: 20px; border-radius: 1px;}
